--- a/Source/Nito.AsyncEx (NET45, Win8, WP8, WPA81)/Nito.AsyncEx (NET45, Win8, WP8, WPA81).csproj
+++ b/Source/Nito.AsyncEx (NET45, Win8, WP8, WPA81)/Nito.AsyncEx (NET45, Win8, WP8, WPA81).csproj
@@ -11,7 +11,9 @@
     <RootNamespace>Nito.AsyncEx</RootNamespace>
     <AssemblyName>Nito.AsyncEx</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <!--
     <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
+    -->
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
@@ -109,12 +111,20 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Enlightenment\Nito.AsyncEx.Enlightenment %28NET4, Win8, SL5, WP8, WPA81%29\Nito.AsyncEx.Enlightenment %28NET4, Win8, SL5, WP8, WPA81%29.csproj">
+    <ProjectReference Include="..\Enlightenment\Nito.AsyncEx.Enlightenment %28NET45%29\Nito.AsyncEx.Enlightenment %28NET45%29.csproj">
       <Project>{40ce2f27-b155-4d4e-8b07-a65b79b7dbea}</Project>
       <Name>Nito.AsyncEx.Enlightenment %28NET4, Win8, SL5, WP8, WPA81%29</Name>
     </ProjectReference>
+    <reference Include="Nito.AsyncEx.Enlightenment" />
+    <reference Include="System" />
+    <reference Include="System.ObjectModel" />
+    <reference Include="System.ComponentModel" />
+    <reference Include="System.ComponentModel.EventBasedAsync" />
   </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <!--
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  -->
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
